updates to fix day 1 release issues